--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/murmur?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/murmur?useSSL=false&serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=rootroot
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.sql-script-encoding=UTF-8
 
 
 spring.jpa.show-sql=true
@@ -16,7 +17,8 @@ spring.jpa.generate-ddl=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
-
+# Thymeleaf 설정
+spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
